[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/L2_lab/safety_poster.png" type="Texture" id=1]
[ext_resource path="res://Levels/1.0 - Lab/RobotSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L2_lab/pillow_pile.png" type="Texture" id=3]
[ext_resource path="res://Levels/1.0 - Lab/waste_bin.tscn" type="PackedScene" id=4]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Brains/UnlockableBarrier.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/1.0 - Lab/potted_palm.tscn" type="PackedScene" id=7]
[ext_resource path="res://Brains/DescriptionBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/L2_lab/lab_room.png" type="Texture" id=9]
[ext_resource path="res://sprites/L2_lab/camera.png" type="Texture" id=10]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/L2_lab/science_desk.png" type="Texture" id=13]
[ext_resource path="res://Levels/0.0 Cave/Lever.tscn" type="PackedScene" id=14]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://Levels/1.0 - Lab/labpuzzleroom1.gd" type="Script" id=17]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]
[ext_resource path="res://Levels/1.0 - Lab/ZoomPanel.tscn" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("ZoomPanel_BR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ZoomPanel_UR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -91.9521 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ZoomPanel_UL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 179.007 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ZoomPanel_ML:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 88.0144 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ZoomPanel_M:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -41.28 ]
}

[sub_resource type="Animation" id=2]
resource_name = "go_back"
tracks/0/type = "value"
tracks/0/path = NodePath("ZoomPanel_BR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ZoomPanel_UR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -91.9521 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ZoomPanel_UL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 179.007 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ZoomPanel_ML:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 179.522, 88.0144 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ZoomPanel_M:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -41.28 ]
}

[sub_resource type="Animation" id=3]
resource_name = "go_to_alternate"
tracks/0/type = "value"
tracks/0/path = NodePath("ZoomPanel_BR:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ZoomPanel_UR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -91.9521 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ZoomPanel_UL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 179.007 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ZoomPanel_ML:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 88.0144, 179.522 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ZoomPanel_M:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -41.28 ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.2, 2.6, 3.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 168.882, -77.5046 ), Vector2( 561.169, -72.4537 ), Vector2( 556.118, -446.22 ), Vector2( 167.199, -447.904 ), Vector2( 175.617, -287.959 ), Vector2( 389.438, -304.795 ), Vector2( 130.159, -631.42 ), Vector2( 130.159, -631.42 ) ]
}

[sub_resource type="Animation" id=6]
length = 6.3
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.3, 2.8, 3.3, 3.7, 4.1, 4.4, 4.7, 4.9, 5.1, 5.3, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.301 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 168.882, -77.5046 ), Vector2( 559.485, -74.1375 ), Vector2( 559.485, -439.486 ), Vector2( 168.882, -442.853 ), Vector2( 170.566, -77.5046 ), Vector2( 561.169, -75.8209 ), Vector2( 557.802, -444.536 ), Vector2( 168.882, -444.536 ), Vector2( 172.25, -74.1372 ), Vector2( 556.118, -69.0864 ), Vector2( 557.802, -441.169 ), Vector2( 167.199, -444.536 ), Vector2( 172.25, -80.8719 ), Vector2( 556.118, -72.4537 ), Vector2( 556.118, -441.169 ), Vector2( 170.566, -441.169 ), Vector2( 173.933, -77.5045 ), Vector2( 556.118, -75.8209 ), Vector2( 556.118, -439.486 ), Vector2( 170.566, -441.169 ), Vector2( 173.933, -77.5045 ), Vector2( 556.118, -75.8209 ), Vector2( 556.118, -439.486 ), Vector2( 556.118, -439.486 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "out_of_control"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 556.118, -441.169 ), Vector2( 170.566, -441.169 ), Vector2( 173.933, -77.5045 ), Vector2( 556.118, -75.8209 ), Vector2( 556.118, -439.486 ), Vector2( 170.566, -441.169 ), Vector2( 173.933, -77.5045 ), Vector2( 556.118, -75.8209 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "stopped"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 349.323, 95.1058 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/RemoteTransform2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 366.056, -231.518 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/robot:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 353.096, -752.485 ) ]
}

[sub_resource type="Animation" id=10]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 353.096, -752.485 ), Vector2( 353.096, -577.312 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ok_ok_ok"
} ]
}

[sub_resource type="Animation" id=11]
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "down", "dogdown" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/player:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.7, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "intervention_over"
}, {
"args": [  ],
"method": "gotcha"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "on_to_next_room"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 353.096, -577.312 ), Vector2( 353.096, -577.312 ), Vector2( 353.096, -774.627 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "dogdown", "dogup" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_to_next_room"
} ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "robot_say_what_was_that"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/RemoteTransform2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 366.056, -231.518 ), Vector2( 366.056, -578.214 ) ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 105.925, 49.1887 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 355.91, 37.0089 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 58.0796, 45.179 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 39.2239, 34.0024 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 28.7914, 34.2006 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 89.8649, 57.2913 )

[node name="labpuzzleroom1" type="Node2D"]
script = ExtResource( 17 )

[node name="bottomSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 341.267, 124.391 )

[node name="topSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 345.292, -567.789 )

[node name="lab_room" type="Sprite" parent="."]
position = Vector2( 364.749, -433.062 )
texture = ExtResource( 9 )

[node name="safety_poster" type="Sprite" parent="."]
position = Vector2( 637.714, -824.868 )
texture = ExtResource( 1 )

[node name="ZoomPanels" type="Node2D" parent="."]
position = Vector2( -639.844, -1008.59 )

[node name="zoomanimation" type="AnimationPlayer" parent="ZoomPanels"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/go_back = SubResource( 2 )
anims/go_to_alternate = SubResource( 3 )

[node name="ZoomPanel_BL" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 806.185, 955.659 )
rotation = 1.58149

[node name="AnimatedSprite" parent="ZoomPanels/ZoomPanel_BL" index="0"]
animation = "ready"
frame = 1

[node name="ZoomPanel_BR" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 1190.49, 957.297 )

[node name="ZoomPanel_UR" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 1192.07, 584.319 )
rotation = -1.60487

[node name="ZoomPanel_UL" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 801.559, 584.722 )
rotation = 3.12426

[node name="ZoomPanel_ML" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 803.344, 736.395 )
rotation = 1.53614

[node name="ZoomPanel_M" parent="ZoomPanels" instance=ExtResource( 20 )]
position = Vector2( 1020.88, 725.688 )
rotation = -0.720471

[node name="pillow_pile" type="Sprite" parent="."]
position = Vector2( 109.114, -619.105 )
texture = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="Lever" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -10.0858, 1.34656 )

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 349.323, 95.1058 )
camera = NodePath("../../PuppyCamera")

[node name="potted_palm" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 756.237, -610.597 )

[node name="waste_bin" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 639.701, -615.664 )

[node name="robot" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( 353.096, -752.485 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort"]
position = Vector2( 366.056, -231.518 )

[node name="camera" type="Sprite" parent="."]
position = Vector2( -37.6627, -975.474 )
texture = ExtResource( 10 )

[node name="science_desk" type="Sprite" parent="."]
position = Vector2( -21.5583, 102.415 )
texture = ExtResource( 13 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -1760.59
margin_top = -1772.21
margin_right = 1988.41
margin_bottom = 1211.79

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -594.139, -1448.29 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1353.68, 654.404 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "default"
anims/default = SubResource( 4 )
anims/doggo_default_run = SubResource( 5 )
anims/out_of_control = SubResource( 6 )
anims/really_out_of_control = SubResource( 7 )
anims/stopped = SubResource( 8 )

[node name="CutsceneAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "default"
anims/default = SubResource( 9 )
anims/intervene = SubResource( 10 )
anims/intervene2 = SubResource( 11 )
anims/on_to_next_room = SubResource( 12 )
anims/robot_appear = SubResource( 13 )

[node name="Collisions" type="Node2D" parent="."]

[node name="left" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/left"]
polygon = PoolVector2Array( 249.419, -668.826, -96.173, -668.826, -96.173, 82.0277, 55.4896, 77.0552, 50.5171, 188.937, 234.501, 191.424, -461.655, 514.639, -476.573, -934.858 )

[node name="right" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/right"]
polygon = PoolVector2Array( 445.959, -662.686, 826.234, -663.854, 808.83, 193.91, 450.807, 191.424, 1074.86, 502.208, 1069.89, -1004.47 )

[node name="bottomTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 340.725, 295.695 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
position = Vector2( 2.94629, -11.7848 )
shape = SubResource( 14 )

[node name="UnlockableBarrier" parent="." instance=ExtResource( 6 )]
position = Vector2( 345.735, -673.007 )
unlock_var_name = "alllabpuzzlesdone"
locked_description = [ "BEEP BOOP. ACCESS DENIED." ]

[node name="CollisionShape2D" parent="UnlockableBarrier/StaticBody2D" index="0"]
position = Vector2( 0, -63.7308 )

[node name="SeenBox" parent="UnlockableBarrier" index="1"]
position = Vector2( 3.12292, -46.9408 )

[node name="topTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 351.378, -743.017 )

[node name="CollisionShape2D" parent="topTZ" index="0"]
position = Vector2( -2.51953, -15.1174 )
shape = SubResource( 15 )

[node name="Node2D" type="Node2D" parent="."]

[node name="notes" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( -23.1567, 95.1998 )
description = [ "Notes: Wheeeeeeeee (?)", "Zooooooooom (???)" ]

[node name="CollisionShape2D" parent="Node2D/notes/SeenBox" index="0"]
position = Vector2( 3.10657, 13.9797 )
shape = SubResource( 16 )

[node name="tree" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( 751.439, -612.797 )
description = [ "Cycas revoluta!" ]

[node name="CollisionShape2D" parent="Node2D/tree/SeenBox" index="0"]
position = Vector2( 9.69312, 1.9386 )
shape = SubResource( 17 )

[node name="trash" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( 639.739, -593.213 )
description = [ "Some delightful rubbish...
You resist the temptation." ]

[node name="CollisionShape2D" parent="Node2D/trash/SeenBox" index="0"]
position = Vector2( 0, -7.75446 )
shape = SubResource( 18 )

[node name="pillows" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( 95.2013, -627.995 )
description = [ "Soft as a dream..." ]

[node name="CollisionShape2D" parent="Node2D/pillows/SeenBox" index="0"]
position = Vector2( 5.01062, 3.34033 )
shape = SubResource( 19 )
[connection signal="activated" from="ZoomPanels/ZoomPanel_BL" to="." method="_on_ZoomPanel_BL_activated"]
[connection signal="activated" from="ZoomPanels/ZoomPanel_BR" to="." method="_on_ZoomPanel_BR_activated"]
[connection signal="activated" from="ZoomPanels/ZoomPanel_UR" to="." method="_on_ZoomPanel_UR_activated"]
[connection signal="activated" from="ZoomPanels/ZoomPanel_UL" to="." method="_on_ZoomPanel_UL_activated"]
[connection signal="activated" from="ZoomPanels/ZoomPanel_ML" to="." method="_on_ZoomPanel_ML_activated"]
[connection signal="activated" from="ZoomPanels/ZoomPanel_M" to="." method="_on_ZoomPanel_M_activated"]
[connection signal="pulled" from="YSort/Lever" to="." method="_on_Lever_pulled"]
[connection signal="transition_triggered" from="bottomTZ" to="." method="_on_bottomTZ_transition_triggered"]
[connection signal="transition_triggered" from="topTZ" to="." method="_on_topTZ_transition_triggered"]

[editable path="ZoomPanels/ZoomPanel_BL"]

[editable path="PuppyCamera"]

[editable path="bottomTZ"]

[editable path="UnlockableBarrier"]

[editable path="UnlockableBarrier/SeenBox"]

[editable path="topTZ"]

[editable path="Node2D/notes"]

[editable path="Node2D/notes/SeenBox"]

[editable path="Node2D/tree"]

[editable path="Node2D/tree/SeenBox"]

[editable path="Node2D/trash"]

[editable path="Node2D/trash/SeenBox"]

[editable path="Node2D/pillows"]

[editable path="Node2D/pillows/SeenBox"]
